katalog/nginx/bases/controller/daemonset.yml
# Copyright (c) 2017-present SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-ingress-controller
spec:
  selector:
    matchLabels:
      app: ingress-nginx
  revisionHistoryLimit: 10
  minReadySeconds: 0
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: ingress-nginx
    spec:
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: ingress-nginx
      securityContext:
        fsGroup: 101
      terminationGracePeriodSeconds: 300
      containers:
        - name: nginx-ingress-controller
          image: k8s.gcr.io/ingress-nginx/controller
          imagePullPolicy: Always
          lifecycle:
            preStop:
              exec:
                command:
                  - /wait-shutdown
          args:
            - /nginx-ingress-controller
            - --configmap=$(POD_NAMESPACE)/nginx-configuration
            - --publish-service=$(POD_NAMESPACE)/ingress-nginx
            - --annotations-prefix=nginx.ingress.kubernetes.io
            - --http-port=8080
            - --https-port=8443
            - --ingress-class=nginx
            - --election-id=ingress-controller-leader
            - --controller-class=k8s.io/ingress-nginx
            - --validating-webhook=:9443
            - --validating-webhook-certificate=/usr/local/certificates/tls.crt
            - --validating-webhook-key=/usr/local/certificates/tls.key
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
            runAsUser: 101
            runAsNonRoot: true
            runAsGroup: 101
            allowPrivilegeEscalation: true
          ports:
            - name: http
              protocol: TCP
              containerPort: 8080
            - name: https
              protocol: TCP
              containerPort: 8443
            - name: metrics
              containerPort: 10254
            - name: webhook
              protocol: TCP
              containerPort: 9443
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 100m
              memory: 90Mi
          volumeMounts:
            - mountPath: /usr/local/certificates/
              name: ingress-nginx-tls
              readOnly: true
      volumes:
        - name: ingress-nginx-tls
          secret:
            defaultMode: 420
            secretName: ingress-nginx-tls
