katalog/nginx/bases/controller/service.yml
# Copyright (c) 2017-present SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

---
kind: Service
apiVersion: v1
metadata:
  name: ingress-nginx
  labels:
    app: ingress-nginx
spec:
  externalTrafficPolicy: Local
  type: NodePort
  ports:
    - name: http
      port: 80
      nodePort: 31080
      targetPort: http
    - name: https
      port: 443
      nodePort: 31443
      targetPort: https
  selector:
    app: ingress-nginx
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-admission
  namespace: ingress-nginx
spec:
  type: ClusterIP
  ports:
    - appProtocol: https
      name: https-webhook
      port: 9443
      targetPort: webhook
  selector:
    app: ingress-nginx
